--- a/Remote/chs/downloadsTop.htm
+++ b/Remote/chs/downloadsTop.htm
@@ -1,41 +1,34 @@
-<td class="tabedg">&nbsp;</td>
-</tr> </table> </td> </tr>
-<tr>
-	<td class="frame">
-		<form method="get" action="" ID="Form1">
-			<table width="100%">
-				<tr>
-					<td nowrap style="font-size: 8pt"><input type="hidden" name="filter_set" value="1" ID="Hidden1"><b>过滤:</b></td>
-					<td />
-					<td><input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>></td>
-					<td nowrap style="font-size: 8pt"><label for="filter_active">活动的</label></td>
-					<td />
-					<td><input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>></td>
-					<td nowrap style="font-size: 8pt"><label for="filter_queued">队列中</label></td>
-					<td />
-					<td><input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>></td>
-					<td nowrap style="font-size: 8pt"><label for="filter_sources">无资源</label></td>
-					<td />
-					<td><input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>></td>
-					<td nowrap style="font-size: 8pt"><label for="filter_paused">已暂停</label></td>
-					<td />
-					<td><input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>></td>
-					<td nowrap style="font-size: 8pt"><label for="filter_show_all">显示所有资源</label></td>
-					<td />
-					<td nowrap><input type="submit" value="设置"></td>
-					<td width="100%" />
-					<td nowrap align="right" style="font-size: 8pt"><a href="?refresh=<%= random %>">刷新页面</a></td>
-				</tr>
-			</table>
-		</form>
-		<br>
-		<table width="100%" cellspacing="0" style="border-collapse: collapse">
-			<tr>
-				<td class="viewheader">下载文件</td>
-				<td class="viewheader" align="center">大小</td>
-				<td class="viewheader" align="center">进程</td>
-				<td class="viewheader" align="center">速度</td>
-				<td class="viewheader" align="center">资源</td>
-				<td class="viewheader" align="center">状态</td>
-				<td class="viewheader" align="center">控制</td>
+﻿
+<!-- downloadsTop-->
+</ul>
+<div  id="content">
+	<div id="functions"><a href="?refresh=<%= random %>">刷新页面</a></div>
+		<div id="filters">	
+			<form method="get" action="" ID="Form1">
+						<input type="hidden" name="filter_set" value="1" ID="Hidden1">
+						<b>过滤:</b>
+						<input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>>
+						<label for="filter_active">活动的</label>
+						<input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>>
+						<label for="filter_queued">队列中</label>
+						<input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>>
+						<label for="filter_sources">无资源</label>
+						<input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>>
+						<label for="filter_paused">已暂停</label>
+						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>>
+						<label for="filter_show_all">显示所有资源</label>
+						<input type="submit" value=" 设置 "><br />
+			</form>
+		</div>
+		<br />
+<table>
+	<tr>
+				<th>下载文件</th>
+				<th>大小</th>
+				<th>进程</th>
+				<th>速度</th>
+				<th>资源</th>
+				<th>状态</th>
+				<th>控制</th>
 			</tr>
+<!-- /downloadsTop-->
