--- a/Remote/chs/networkHeader.htm
+++ b/Remote/chs/networkHeader.htm
@@ -1,25 +1,17 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">首页</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">搜索</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">下载</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">上传</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">网络</td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p align="right" style="font-size: 8pt">
+﻿<!-- networkHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">首页</a></li>
+				<li class="inactive"><a href="search" class="noline">搜索</a></li>
+				<li class="inactive"><a href="downloads" class="noline">下载</a></li>
+				<li class="inactive"><a href="uploads" class="noline">上传</a></li>
+				<li class="active"><a href="network" class="noline">网络</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
 						<a href="?refresh=<%= random %>">刷新页面</a>
-					</p>
+			</div>
+<!-- /networkHeader -->
