--- a/Remote/chs/searchRowStart.htm
+++ b/Remote/chs/searchRowStart.htm
@@ -1,10 +1,12 @@
+﻿<!-- searchRowStart-->
 									<tr>
 <%? row_collapsed %>
-										<td class="viewrow"><a class="emblink" href="?id=<%= search_id %>&expcol=<%= row_urn %>&expand=1"><b>+</b></a> <a href="?id=<%= search_id %>&download=<%= row_urn %>"><%= row_filename %></a></td>
+										<td class="filename"><div title="<%= row_filename %>"><a class="noline" href="?id=<%= search_id %>&amp;expcol=<%= row_urn %>&amp;expand=1">+</a> <a class="noline" href="?id=<%= search_id %>&amp;download=<%= row_urn %>"><%= row_filename %></a></div></td>
 <%?%><%? row_expanded %>
-										<td class="viewrow"><a class="emblink" href="?id=<%= search_id %>&expcol=<%= row_urn %>&collapse=1"><b>-</b></a> <a href="?id=<%= search_id %>&download=<%= row_urn %>"><%= row_filename %></a></td>
+										<td class="filename"><div title="<%= row_filename %>"><a class="noline" href="?id=<%= search_id %>&amp;expcol=<%= row_urn %>&amp;collapse=1">-</a> <a class="noline" href="?id=<%= search_id %>&amp;download=<%= row_urn %>"><%= row_filename %></a></div></td>
 <%?%><%? row_source %>
-										<td class="viewrow">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= row_filename %></td>
+										<td class="filename"><div title="<%= row_filename %>">&nbsp;&nbsp;&nbsp;<%= row_filename %></div></td>
 <%?%><%? !row_collapsed %><%? !row_expanded %><%? !row_source %>
-										<td class="viewrow"><a href="?id=<%= search_id %>&download=<%= row_urn %>"><%= row_filename %></a></td>
+										<td class="filename"><div title="<%= row_filename %>"><a class="noline" href="?id=<%= search_id %>&amp;download=<%= row_urn %>"><%= row_filename %></a></div></td>
 <%?%><%?%><%?%>
+<!--/searchRowStart-->
