--- a/Remote/chs/searchTop.htm
+++ b/Remote/chs/searchTop.htm
@@ -1,28 +1,26 @@
-										<td class="tab"><a class="tab" href="?id=0">新建搜索</a></td>
-										<td class="tabedg">&nbsp;</td>
-									</tr>
-								</table>
-							</td>
-						</tr>
-						<tr>
-							<td class="frame">
-								<table width="100%">
-									<tr>
-										<form method="get">
-											<input type="hidden" name="id" value="<%= search_id %>">
-											<input type="hidden" name="setfilter" value="1">
-											<td style="font-size: 8pt">过滤:</td>
-											<td><input type="text" name="filter" value="<%= search_filter %>" size="20"></td>
-											<td><input type="submit" value="过滤"></td>
-											<td style="font-size: 8pt" align="right" width="100%">
-												<a href="?id=<%= search_id %>&refresh=<%= random %>">刷新页面</a> -
+﻿
+<!-- searchTop -->
+										<li class="active"><a class="noline" href="?id=0">新建搜索</a></li>
+								</ul>
+
+<div style="border: 1px #000 solid;padding: 5px;" id="content">
+	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">刷新页面</a> - 
 <%? searching %>
-												<a href="?id=<%= search_id %>&stop=1"><b>停止搜索</b></a> -
+												<a href="?id=<%= search_id %>&amp;stop=1"><b>停止搜索</b></a> -
 <%?%>
 												<a href="?close=<%= search_id %>">关闭搜索</a>
-											</td>
+	</div>
+		<div id="filters">
+										<form method="get" action="">
+											<input type="hidden" name="id" value="<%= search_id %>" />
+											<input type="hidden" name="setfilter" value="1" />
+											<label>过滤:</label>
+											<input type="text" name="filter" value="<%= search_filter %>" size="20" />
+											<input type="submit" value="过滤:" />
+
 										</form>
-									</tr>
-								</table>
-								<table width="100%" cellspacing="0" style="border-collapse: collapse">
-									<tr>
+		</div>
+										<br />
+<table>
+	<tr>
+<!--/searchTop-->
