--- a/Remote/it/uploadsHeader.htm
+++ b/Remote/it/uploadsHeader.htm
@@ -1,25 +1,17 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Home</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Ricerche</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Download</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Upload</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="network">Reti</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p align="right" style="font-size: 7pt">
-						<a href="?refresh=<%= random %>">Aggiorna Pagina</a>
-					</p>
+﻿<!-- uploadsHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Pagina iniziale</a></li>
+				<li class="inactive"><a href="search" class="noline">Cerca</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Download</a></li>
+				<li class="active"><a href="uploads" class="noline">Upload</a></li>
+				<li class="inactive"><a href="network" class="noline">Reti</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
+						<a href="?refresh=<%= random %>">Ricarica pagina</a>
+			</div>
+<!-- /uploadsHeader -->
