--- a/Remote/it/networkNetStart.htm
+++ b/Remote/it/networkNetStart.htm
@@ -1,24 +1,25 @@
-					<h4><%= network_caption %></h4>
+﻿					<h4><%= network_caption %></h4>
 <%? !network_connected %>
-					<p style="font-size: 7pt;">
-					This network is <b>not</b> enabled -
-					<a href="?connect=<%= network_id %>"><b>Connect to <%= network_caption %></b></a>
+					<p>
+					This network is <strong>not</strong> enabled -
+					<a href="?connect=<%= network_id %>"><strong>Connect to <%= network_caption %></strong></a>
 					</p>
 <%?%><%? network_connected %>
-					<p style="font-size: 7pt;">
+					<p>
 					This network is enabled -
-					<a href="?disconnect=<%= network_id %>"><b>Disable <%= network_caption %></b></a>
+					<a href="?disconnect=<%= network_id %>"><strong>Disable <%= network_caption %></strong></a>
 					</p>
-					<table width="100%" cellspacing="0" style="border-collapse: collapse;">
+				<div class="centertable">
+					<table>
 						<tr>
-							<td class="viewheader">Address</td>
-							<td class="viewheader" align="center">Time</td>
-							<td class="viewheader" align="center">Packets</td>
-							<td class="viewheader" align="center">Bandwidth</td>
-							<td class="viewheader" align="center">Total</td>
-							<td class="viewheader" align="center">Mode</td>
-							<td class="viewheader" align="center">Leaves</td>
-							<td class="viewheader">User-Agent</td>
-							<td class="viewheader"></td>
+							<th>Indirizzo</th>
+							<th>Ora</th>
+							<th>Pacchetti</th>
+							<th>Larghezza di banda</th>
+							<th>Totale</th>
+							<th>Modalità</th>
+							<th>This network is enabled -</th>
+							<th>User-agent</th>
+							<th></th>
 						</tr>
 <%?%>
