--- a/Remote/pt-br/home.htm
+++ b/Remote/pt-br/home.htm
@@ -38,7 +38,7 @@
 					<input type="submit" value="Pirmyn">
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
-					<label>Download Magnet/Torrent</label>
+					<label>Baixar Magnet/Torrent</label>
 					<input type="text" name="uri" size="35">
 					<input type="submit" value="Pirmyn">
 				</form>
@@ -46,11 +46,11 @@
 			</div>
 			<h3>Links Úteis:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
 			</ul>
 		</div>
